--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="content">
 		<div class="container">
 			<div class="row">
-				<img src="img/BANNER.jpg">
+				<img src="BANNER.jpg">
 			</div>
 			<div class="row">
 				<h1>Welcome to Young & Keen</h1>
@@ -44,7 +44,7 @@
 				<h1>Best Product</h1>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/0679401800_2_1_1.jpg"></a>
+						<a href="#"><img src="0679401800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#"> STAR WASH T-SHIRT</a>
@@ -54,7 +54,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4805309800_2_1_1.jpg"></a>
+						<a href="#"><img src="4805309800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">RELAXED BASIC T-SHIRT</a>
@@ -64,7 +64,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4805309800_2_1_1.jpg"></a>
+						<a href="#"><img src="4805309800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">SWEATER SKULL</a>
@@ -74,7 +74,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4087335800_1_1_1.jpg"></a>
+						<a href="#"><img src="4087335800_1_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">FLOCKED T-SHIRT</a>
