--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Young & Keen</title>
 <link href="style.css" rel="stylesheet">
-<link href="img/icon.jpg" rel="shortcut icon">
+<link href="icon.jpg" rel="shortcut icon">
 </head>
 
 <body>
