--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Young & Keen</title>
 <link href="style.css" rel="stylesheet">
-<link href="img/icon.jpg" rel="shortcut icon">
+<link href="icon.jpg" rel="shortcut icon">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 			</div>
 			<div class="row">
 				
-					<div class="logo"><img src="img/logo.jpg"></div>
+					<div class="logo"><img src="logo.jpg"></div>
 				
 			</div>
 		</div>
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/ruching-fashion-trend-p.jpg"></a>
+						<a href="#"><img src="ruching-fashion-trend-p.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#"> DO Get Your Clothes in a Bunch: Ruching Is Very, Very In</a>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/ugg-boots-p.jpg"></a>
+						<a href="#"><img src="ugg-boots-p.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">UGGs Are No Longer Ugly, They’re Trending</a>
@@ -56,7 +56,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/how-to-wear-turtlenecks-mp.jpg"></a>
+						<a href="#"><img src="how-to-wear-turtlenecks-mp.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">The Old-School Layering Piece Every Fashion Girl Owns</a>
@@ -66,7 +66,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/shoulder-duster-earrings.jpg"></a>
+						<a href="#"><img src="shoulder-duster-earrings.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">13 Shoulder Duster Earrings That Take Any Look </a>
