--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="row">
 				
-					<div class="logo"><img src="img/logo.jpg"></div>
+					<div class="logo"><img src="logo.jpg"></div>
 				
 			</div>
 		</div>
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/0679401800_2_1_1.jpg"></a>
+						<a href="#"><img src="0679401800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#"> STAR WASH T-SHIRT</a>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4087335800_1_1_1.jpg"></a>
+						<a href="#"><img src="4087335800_1_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">RELAXED BASIC T-SHIRT</a>
@@ -56,7 +56,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4805309800_2_1_1.jpg"></a>
+						<a href="#"><img src="4805309800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">SWEATER SKULL</a>
@@ -66,7 +66,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/4087335800_1_1_1.jpg"></a>
+						<a href="#"><img src="4087335800_1_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">FLOCKED T-SHIRT</a>
@@ -76,7 +76,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/5372403800_2_1_1.jpg"></a>
+						<a href="#"><img src="5372403800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">BLACK T-SHIRT</a>
@@ -86,7 +86,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/0761427505_1_1_1.jpg"></a>
+						<a href="#"><img src="0761427505_1_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">BROWN BASIC T-SHIRT</a>
@@ -96,7 +96,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/1887302807_1_1_1.jpg"></a>
+						<a href="#"><img src="1887302807_1_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">GREY</a>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="colum">
 					<div class="img">
-						<a href="#"><img src="pic/0722414800_2_1_1.jpg"></a>
+						<a href="#"><img src="0722414800_2_1_1.jpg"></a>
 					</div>
 					<div class="name">
 						<a href="#">SKULL BLACK MEN</a>
